--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -25,7 +25,7 @@
       IP Address Tracker
     </h3>
     <div class="search-box">
-      <input type="text" placeholder="Search for any IP address or domain"> 
+      <input name="ip" type="text" placeholder="Search for any IP address or domain"> 
       <div class="but"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="14"><path fill="none" stroke="#FFF" stroke-width="3" d="M2 1l6 6-6 6"/></svg></div>
     </div>
     
