--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
   {% endif %}
 
   <div class="pic">
-    <img src="./images/pattern-bg-desktop.png" alt="">
+    <img src="./static/pattern-bg-desktop.png" alt="">
   </div>
   <div class="parent">
     <h3 class="titre">
@@ -50,7 +50,7 @@
         <h3>timezone</h3>
         <p>UTC {{ipRes["offset"]}}:00 </p>
       </div>
-      <div class="info">
+      <div class="info last">
         <h3>isp</h3>
         <p>{{ipRes["isp"]}}</p>
       </div>
